--- a/template/core-dist/src/index.html
+++ b/template/core-dist/src/index.html
@@ -10,12 +10,13 @@
   <meta name="theme-color" content="#ffffff">
   <link rel="icon" type="image/png" href="/assets/favicons/favicon-icon.png">
   <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500|Roboto" rel="stylesheet">
   <script src="https://cdn.auth0.com/js/lock/10.8/lock.min.js"></script>
 
   <style>
     app-root > .background {
       background: -webkit-radial-gradient(#40404b, #111118) rgba(34,34,40,0.94);
-    background: radial-gradient(#40404b, #111118) rgba(34,34,40,0.94);
+      background: radial-gradient(#40404b, #111118) rgba(34,34,40,0.94);
       display: block;
       position: absolute;
       top: 0;
