--- a/template/core-dist/src/app/authentication/registration/registration.component.scss
+++ b/template/core-dist/src/app/authentication/registration/registration.component.scss
@@ -102,6 +102,7 @@ md-tab-group {
   }
 
   &__buttons {
+    z-index: 1000;
     position: absolute;
     bottom: 15px;
     right: 15px;
@@ -200,6 +201,7 @@ md-tab-group {
   }
 
   &__actions {
+    z-index: 1000;
     padding-top: 5px;
 
     &__label {
@@ -215,7 +217,6 @@ md-tab-group {
     }
   }
 }
-
 
 table {
   td {
