--- a/template/core-dist/src/app/authentication/registration/registration.component.scss
+++ b/template/core-dist/src/app/authentication/registration/registration.component.scss
@@ -1,4 +1,3 @@
-
 .registration {
   &--out {
     position: absolute;
@@ -33,6 +32,27 @@
         color: white;
       }
     }
+
+    @media only screen and (max-width : 1200px) {
+      top: 18%;
+      left: 15%;
+      width: 70%;
+      height: 64%;
+    }
+
+    @media only screen and (max-width : 900px) {
+      top: 10%;
+      left: 12%;
+      width: 80%;
+      height: 76%;
+    }
+
+    @media only screen and (max-width : 600px) {
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
   }
 }
 
@@ -40,6 +60,18 @@ md-tab-group {
   float: right;
   width: 60%;
   height: 100%;
+
+  @media only screen and (max-width : 1200px) {
+
+  }
+
+  @media only screen and (max-width : 900px) {
+
+  }
+
+  @media only screen and (max-width : 600px) {
+    width: 100%;
+  }
 }
 
 .tab {
@@ -54,6 +86,18 @@ md-tab-group {
     font-size: 20px;
     color: #333333;
 
+    @media only screen and (max-width : 1200px) {
+
+    }
+
+    @media only screen and (max-width : 900px) {
+
+    }
+
+    @media only screen and (max-width : 600px) {
+      width: 100%;
+    }
+
     span {
       padding-left: 20px;
     }
@@ -61,6 +105,18 @@ md-tab-group {
 
   &__content {
     margin: 40px 40px 0 30px;
+
+    @media only screen and (max-width : 1200px) {
+
+    }
+
+    @media only screen and (max-width : 900px) {
+
+    }
+
+    @media only screen and (max-width : 600px) {
+      margin: 20px 10px 0 10px;
+    }
 
     &__label {
       padding-left: 25px;
@@ -98,7 +154,19 @@ md-tab-group {
     left: 0;
     border-bottom-left-radius: 5px;
     height: 100%;
-    max-width: 40%;
+    max-width: 45%;
+
+    @media only screen and (max-width : 1200px) {
+
+    }
+
+    @media only screen and (max-width : 900px) {
+
+    }
+
+    @media only screen and (max-width : 600px) {
+      display: none;
+    }
   }
 
   &__buttons {
@@ -128,6 +196,18 @@ md-tab-group {
   float: right;
   width: 60%;
   height: 100%;
+
+  @media only screen and (max-width : 1200px) {
+
+  }
+
+  @media only screen and (max-width : 900px) {
+
+  }
+
+  @media only screen and (max-width : 600px) {
+    width: 100%;
+  }
 
   &__terms {
     &__title {
@@ -179,6 +259,18 @@ md-tab-group {
 .terms {
   width: 55%;
 
+  @media only screen and (max-width : 1200px) {
+
+  }
+
+  @media only screen and (max-width : 900px) {
+
+  }
+
+  @media only screen and (max-width : 600px) {
+    width: 100%;
+  }
+
   &__title {
     margin-bottom: 0;
     font-family: Montserrat, serif;
@@ -221,6 +313,18 @@ md-tab-group {
 table {
   td {
     padding: 2px 15px 10px 15px;
+
+    @media only screen and (max-width : 1200px) {
+
+    }
+
+    @media only screen and (max-width : 900px) {
+
+    }
+
+    @media only screen and (max-width : 600px) {
+      padding: 2px 5px 5px 5px;
+    }
 
     .full {
       width: 100%;
