--- a/template/core-dist/src/app/pages/fulfillment-providers/fulfillment-providers.component.html
+++ b/template/core-dist/src/app/pages/fulfillment-providers/fulfillment-providers.component.html
@@ -1,35 +1,41 @@
-<button md-fab class="entity-index__button--add"> <md-icon>add</md-icon></button>
+<md-card class="entity-index__card">
+  <md-card-title class="entity-index__card__title"> <span>Fulfillment Provider Index</span> </md-card-title>
+  <md-card-content class="entity-index__card__content">
+    <button md-raised-button color="primary" (click)="addEntity()">New Fulfillment Provider</button>
 
-<div class="entity-index__search">
-  <md-input placeholder="search"></md-input>
-  <button md-raised-button color="primary">search</button>
-</div>
+    <div class="entity-index__search">
+      <md-input placeholder="search"></md-input>
+      <button md-raised-button color="primary">search</button>
+    </div>
 
-<table class="highlight">
-  <thead class="entity-index__table__header">
-  <tr>
-    <th data-field="name">name</th>
-    <th data-field="username">Username</th>
-    <th data-field="password">Password</th>
-    <th data-field="endpoint">Endpoint</th>
-    <th data-field="provider">Provider</th>
-    <th>Actions</th>
-  </tr>
-  </thead>
+    <table class="entity-index__table highlight">
+      <thead class="entity-index__table__header">
+      <tr>
+        <th data-field="name">Name</th>
+        <th data-field="username">Username</th>
+        <th data-field="password">Password</th>
+        <th data-field="endpoint">Endpoint</th>
+        <th data-field="provider">Provider</th>
+        <th>Actions</th>
+      </tr>
+      </thead>
 
-  <tbody>
-  <tr *ngFor="let fulfillmentProvider of fulfillmentProviders">
-    <td>{{fulfillmentProvider.name}}</td>
-    <td>{{fulfillmentProvider.username}}</td>
-    <td>{{fulfillmentProvider.password}}</td>
-    <td>{{fulfillmentProvider.endpoint}}</td>
-    <td>{{fulfillmentProvider.provider}}</td>
-    <td>
-      <md-icon class="entity-index__table__body__action" (click)="viewEntity(fulfillmentProvider.id)">visibility</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="updateEntity(fulfillmentProvider.id)">mode_edit</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="deleteEntity(fulfillmentProvider.id)">delete</md-icon>
-    </td>
-  </tr>
-  </tbody>
+      <tbody>
+      <tr *ngFor="let fulfillmentProvider of fulfillmentProviders">
+        <td>{{fulfillmentProvider.name}}</td>
+        <td>{{fulfillmentProvider.username}}</td>
+        <td>{{fulfillmentProvider.password}}</td>
+        <td>{{fulfillmentProvider.endpoint}}</td>
+        <td>{{fulfillmentProvider.provider}}</td>
+        <td>
+          <md-icon class="entity-index__table__body__action" (click)="viewEntity(fulfillmentProvider.id)">visibility</md-icon>
+          <md-icon class="entity-index__table__body__action" (click)="updateEntity(fulfillmentProvider.id)">mode_edit</md-icon>
+          <md-icon class="entity-index__table__body__action" (click)="deleteEntity(fulfillmentProvider.id)">delete</md-icon>
+        </td>
+      </tr>
+      </tbody>
 
-</table>
+    </table>
+  </md-card-content>
+</md-card>
+
