--- a/template/core-dist/src/app/pages/affiliates-page/affiliates-view/affiliates-view.component.html
+++ b/template/core-dist/src/app/pages/affiliates-page/affiliates-view/affiliates-view.component.html
@@ -1,29 +1,20 @@
-<md-card *ngIf="affiliate">
-  <md-card-title>Affiliate View</md-card-title>
-  <md-card-content>
+<md-card class="entity-view__card" *ngIf="entity">
+  <md-card-title class="entity-view__card__title"> <span>{{mode}} Affiliate</span> </md-card-title>
+  <md-card-content class="entity-view__card__content">
+    <md-input [disabled]="viewMode" placeholder="ID" [(ngModel)]="entity.id" name="id"></md-input>
+    <md-input [disabled]="viewMode" placeholder="Affiliate ID" [(ngModel)]="entity.affiliateId" name="affiliateId"></md-input>
     <div>
-      <md-input disabled placeholder="ID" value="{{affiliate.id}}"></md-input>
+      <md-input [disabled]="viewMode" placeholder="Sub ID 1" [(ngModel)]="entity.subId1" name="subId1"></md-input>
+      <md-input [disabled]="viewMode" placeholder="Sub ID 2" [(ngModel)]="entity.subId2" name="subId2"></md-input>
+      <md-input [disabled]="viewMode" placeholder="Sub ID 3" [(ngModel)]="entity.subId3" name="subId3"></md-input>
+      <md-input [disabled]="viewMode" placeholder="Sub ID 4" [(ngModel)]="entity.subId4" name="subId4"></md-input>
+      <md-input [disabled]="viewMode" placeholder="Sub ID 5" [(ngModel)]="entity.subId5" name="subId5"></md-input>
     </div>
-    <div>
-      <md-input disabled placeholder="Affiliate ID" value="{{affiliate.affiliateId}}"></md-input>
-    </div>
-    <div>
-      <md-input disabled placeholder="Sub ID 1" value="{{affiliate.subId1}}"></md-input>
-    </div>
-    <div>
-      <md-input disabled placeholder="Sub ID 2" value="{{affiliate.subId2}}"></md-input>
-    </div>
-    <div>
-      <md-input disabled placeholder="Sub ID 3" value="{{affiliate.subId3}}"></md-input>
-    </div>
-    <div>
-      <md-input disabled placeholder="Sub ID 4" value="{{affiliate.subId4}}"></md-input>
-    </div>
-    <div>
-      <md-input disabled placeholder="Sub ID 5" value="{{affiliate.subId5}}"></md-input>
-    </div>
-    <div>
-      <md-input disabled placeholder="Click ID" value="{{affiliate.clickId}}"></md-input>
-    </div>
+    <md-input [disabled]="viewMode" placeholder="Click ID" [(ngModel)]="entity.clickId" name="clickId"></md-input>
   </md-card-content>
+  <md-card-actions align="end">
+    <button md-raised-button color="primary" *ngIf="addMode" (click)="saveEntity(entity)">Save</button>
+    <button md-raised-button color="primary" *ngIf="updateMode" (click)="updateEntity(entity)">Save</button>
+    <button md-raised-button color="primary" *ngIf="updateMode" (click)="cancelUpdate()">Cancel</button>
+  </md-card-actions>
 </md-card>
