--- a/template/core-dist/src/app/pages/affiliates-page/affiliates.component.html
+++ b/template/core-dist/src/app/pages/affiliates-page/affiliates.component.html
@@ -1,39 +1,45 @@
-<button md-fab class="entity-index__button--add"> <md-icon>add</md-icon></button>
+<md-card class="entity-index__card">
+  <md-card-title class="entity-index__card__title"> <span>Affiliates Index</span> </md-card-title>
+  <md-card-content class="entity-index__card__content">
+    <button md-raised-button color="primary" (click)="addEntity()">New Affiliate</button>
 
-<div class="entity-index__search">
-  <md-input placeholder="search"></md-input>
-  <button md-raised-button color="primary">search</button>
-</div>
+    <div class="entity-index__search">
+      <md-input placeholder="search"></md-input>
+      <button md-raised-button color="primary">search</button>
+    </div>
 
-<table class="highlight">
-  <thead class="entity-index__table__header">
-  <tr>
-    <th data-field="affiliateId">Affiliate ID</th>
-    <th data-field="subId1">Sub ID 1</th>
-    <th data-field="subId2">Sub ID 2</th>
-    <th data-field="subId3">Sub ID 3</th>
-    <th data-field="subId4">Sub ID 4</th>
-    <th data-field="subId5">Sub ID 5</th>
-    <th data-field="clickId">Click ID</th>
-    <th>Actions</th>
-  </tr>
-  </thead>
+    <table class="entity-index__table highlight">
+      <thead class="entity-index__table__header">
+      <tr>
+        <th data-field="affiliateId">Affiliate ID <md-icon>keyboard_arrow_down</md-icon></th>
+        <th data-field="subId1">Sub ID 1 <md-icon>keyboard_arrow_down</md-icon></th>
+        <th data-field="subId2">Sub ID 2 <md-icon>keyboard_arrow_down</md-icon></th>
+        <th data-field="subId3">Sub ID 3 <md-icon>keyboard_arrow_down</md-icon></th>
+        <th data-field="subId4">Sub ID 4 <md-icon>keyboard_arrow_down</md-icon></th>
+        <th data-field="subId5">Sub ID 5 <md-icon>keyboard_arrow_down</md-icon></th>
+        <th data-field="clickId">Click ID <md-icon>keyboard_arrow_down</md-icon></th>
+        <th>Actions</th>
+      </tr>
+      </thead>
 
-  <tbody>
-  <tr *ngFor="let affiliate of affiliates">
-    <td>{{affiliate.affiliateId}}</td>
-    <td>{{affiliate.subId1}}</td>
-    <td>{{affiliate.subId2}}</td>
-    <td>{{affiliate.subId3}}</td>
-    <td>{{affiliate.subId4}}</td>
-    <td>{{affiliate.subId5}}</td>
-    <td>{{affiliate.clickId}}</td>
-    <td>
-      <md-icon class="entity-index__table__body__action" (click)="viewEntity(affiliate.id)">visibility</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="updateEntity(affiliate.id)">mode_edit</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="deleteEntity(affiliate.id)">delete</md-icon>
-    </td>
-  </tr>
-  </tbody>
+      <tbody>
+      <tr *ngFor="let affiliate of affiliates">
+        <td>{{affiliate.affiliateId}}</td>
+        <td>{{affiliate.subId1}}</td>
+        <td>{{affiliate.subId2}}</td>
+        <td>{{affiliate.subId3}}</td>
+        <td>{{affiliate.subId4}}</td>
+        <td>{{affiliate.subId5}}</td>
+        <td>{{affiliate.clickId}}</td>
+        <td>
+          <md-icon class="entity-index__table__body__action" (click)="viewEntity(affiliate.id)">visibility</md-icon>
+          <md-icon class="entity-index__table__body__action" (click)="updateEntity(affiliate.id)">mode_edit</md-icon>
+          <md-icon class="entity-index__table__body__action" (click)="deleteEntity(affiliate.id)">delete</md-icon>
+        </td>
+      </tr>
+      </tbody>
 
-</table>
+    </table>
+  </md-card-content>
+</md-card>
+
