--- a/template/core-dist/src/app/authentication/registration/registration.component.scss
+++ b/template/core-dist/src/app/authentication/registration/registration.component.scss
@@ -307,6 +307,15 @@ md-tab-group {
       font-family: Montserrat, serif;
       font-weight: 500;
     }
+
+    div {
+      margin-top: 10px;
+      font-family: Roboto, serif;
+      font-weight: 300;
+      font-size: 18px;
+      color: #9b9b9b;
+      cursor: pointer;
+    }
   }
 }
 
