--- a/template/core-dist/src/app/authentication/registration/registration.component.scss
+++ b/template/core-dist/src/app/authentication/registration/registration.component.scss
@@ -8,15 +8,17 @@
   }
 
   &--in {
-    position: absolute;
-    top: 22%;
-    left: 20%;
-    margin: 0;
+    position: relative;
+    margin: auto;
     box-shadow: 0 0 40px 4px #111118;
+    top: 50%;
+    transform: translateY(-50%);
     box-sizing: border-box;
     padding: 20px 20px 60px 20px;
     width: 60%;
     height: 56%;
+    min-width: 800px;
+    min-height: 500px;
     border-radius: 1%;
     background-color: white;
 
@@ -34,24 +36,21 @@
     }
 
     @media only screen and (max-width : 1200px) {
-      top: 18%;
-      left: 15%;
       width: 70%;
       height: 64%;
     }
 
     @media only screen and (max-width : 900px) {
-      top: 10%;
-      left: 12%;
-      width: 80%;
-      height: 76%;
+      width: 70%;
+      height: 64%;
+      min-width: 0;
+      min-height: 0;
     }
 
     @media only screen and (max-width : 600px) {
-      top: 0;
-      left: 0;
       width: 100%;
       height: 100%;
+      border-radius: 0;
     }
   }
 }
@@ -61,60 +60,62 @@ md-tab-group {
   width: 60%;
   height: 100%;
 
-  @media only screen and (max-width : 1200px) {
-
-  }
-
   @media only screen and (max-width : 900px) {
-
-  }
-
-  @media only screen and (max-width : 600px) {
     width: 100%;
   }
 }
 
 .tab {
   &__header {
-    float: right;
-    margin: 30px 0 45px 0;
-    width: 60%;
-    border-bottom: solid 3px #0899CD;
-    padding-bottom: 5px;
-    font-family: Montserrat, serif;
-    font-weight: 400;
-    font-size: 20px;
-    color: #333333;
 
-    @media only screen and (max-width : 1200px) {
+    &__content {
+      position: relative;
+      float: right;
+      margin: 30px 0 45px 0;
+      width: 60%;
+      border-bottom: solid 3px #0899CD;
+      padding-bottom: 5px;
+      font-family: Montserrat, serif;
+      font-weight: 400;
+      font-size: 20px;
+      color: #333333;
 
-    }
+      @media only screen and (max-width: 900px) {
+        width: 100%;
+      }
 
-    @media only screen and (max-width : 900px) {
+      img {
+        display: none;
 
-    }
+        @media only screen and (max-width: 900px) {
+          position: absolute;
+          display: inline-block;
+          left: 2px;
+          bottom: 2px;
+          width: 35px;
+          height: 35px;
+        }
+      }
 
-    @media only screen and (max-width : 600px) {
-      width: 100%;
-    }
+      span {
+        padding-left: 20px;
 
-    span {
-      padding-left: 20px;
+        @media only screen and (max-width: 900px) {
+          padding-left: 45px;
+          font-size: 24px;
+        }
+
+        @media only screen and (max-width: 600px) {
+          font-size: 20px;
+        }
+      }
     }
   }
 
   &__content {
     margin: 40px 40px 0 30px;
 
-    @media only screen and (max-width : 1200px) {
-
-    }
-
     @media only screen and (max-width : 900px) {
-
-    }
-
-    @media only screen and (max-width : 600px) {
       margin: 20px 10px 0 10px;
     }
 
@@ -156,15 +157,7 @@ md-tab-group {
     height: 100%;
     max-width: 45%;
 
-    @media only screen and (max-width : 1200px) {
-
-    }
-
     @media only screen and (max-width : 900px) {
-
-    }
-
-    @media only screen and (max-width : 600px) {
       display: none;
     }
   }
@@ -197,15 +190,7 @@ md-tab-group {
   width: 60%;
   height: 100%;
 
-  @media only screen and (max-width : 1200px) {
-
-  }
-
   @media only screen and (max-width : 900px) {
-
-  }
-
-  @media only screen and (max-width : 600px) {
     width: 100%;
   }
 
@@ -254,21 +239,22 @@ md-tab-group {
   box-sizing: border-box;
   padding: 0 5px 0 25px;
   width: 50%;
+
+  @media only screen and (max-width : 900px) {
+    padding: 0 10px;
+  }
+
+  @media only screen and (max-width : 600px) {
+    padding: 0 5px;
+  }
 }
 
 .terms {
   width: 55%;
 
-  @media only screen and (max-width : 1200px) {
-
-  }
-
   @media only screen and (max-width : 900px) {
-
-  }
-
-  @media only screen and (max-width : 600px) {
     width: 100%;
+    text-align: center;
   }
 
   &__title {
@@ -277,6 +263,10 @@ md-tab-group {
     font-size: 36px;
     font-weight: 900;
     color: #333333;
+
+    @media only screen and (max-width : 600px) {
+      font-size: 30px;
+    }
   }
 
   &__subtitle {
@@ -284,12 +274,20 @@ md-tab-group {
     font-family: Montserrat, serif;
     font-weight: 300;
     font-size: 36px;
+
+    @media only screen and (max-width : 600px) {
+      font-size: 30px;
+    }
   }
 
   &__content {
     width: 80%;
     font-size: 18px;
     color: #9b9b9b;
+
+    @media only screen and (max-width : 900px) {
+      margin: auto
+    }
   }
 
   &__actions {
@@ -299,6 +297,10 @@ md-tab-group {
     &__label {
       font-size: 18px;
       color: #9b9b9b;
+
+      @media only screen and (max-width : 600px) {
+        font-size: 16px;
+      }
     }
 
     button {
@@ -315,6 +317,10 @@ md-tab-group {
       font-size: 18px;
       color: #9b9b9b;
       cursor: pointer;
+
+      @media only screen and (max-width : 600px) {
+        font-size: 16px;
+      }
     }
   }
 }
@@ -323,12 +329,8 @@ table {
   td {
     padding: 2px 15px 10px 15px;
 
-    @media only screen and (max-width : 1200px) {
-
-    }
-
     @media only screen and (max-width : 900px) {
-
+      padding: 5px 10px 10px 10px;
     }
 
     @media only screen and (max-width : 600px) {
@@ -350,6 +352,10 @@ md-input {
   width: 100%;
   font-size: 14px;
   color: #9b9b9b;
+
+  @media only screen and (max-width : 900px) {
+    margin: 0;
+  }
 }
 
 md-card-subtitle {
