--- a/template/core-dist/src/app/navigation/topnav/topnav.component.html
+++ b/template/core-dist/src/app/navigation/topnav/topnav.component.html
@@ -5,6 +5,8 @@
   </button>
 
   <span class="app-flex-filler"></span>
+  <button md-icon-button class="topnav__search__trigger" (click)="toggleSearchInput()"> <md-icon>search</md-icon> </button>
+  <md-input class="topnav__search__input" *ngIf="showSearchInput" placeholder="Search"></md-input>
   <span (click)="toggleDropdownMenu()" class="topnav__dropdown__trigger">{{_userProfile.name}}</span>
 
   <div *ngIf="showDropdown" class="topnav__dropdown__menu">
