--- a/template/core-dist/src/app/navigation/topnav/topnav.component.scss
+++ b/template/core-dist/src/app/navigation/topnav/topnav.component.scss
@@ -3,50 +3,58 @@
   display: block;
 }
 
-.topnav__dropdown {
-  &__trigger {
-    @include font-subheader();
-
-    &:hover {
-      cursor: pointer;
+.topnav {
+  &__search {
+    &__input {
+      width: 200px;
     }
   }
 
-  &__menu {
-    position: absolute;
-    top: 63px;
-    right: 0;
-    z-index: 1000;
-    background-color: white;
-    box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
-    text-align: right;
+  &__dropdown {
+    &__trigger {
+      @include font-subheader();
 
-    &__profile {
-      display: inline-block;
+      &:hover {
+        cursor: pointer;
+      }
+    }
 
-      &__image {
+    &__menu {
+      position: absolute;
+      top: 63px;
+      right: 0;
+      z-index: 1000;
+      background-color: white;
+      box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
+      text-align: right;
+
+      &__profile {
         display: inline-block;
-        border-radius: 50%;
-        width: 40px;
-        height: 40px;
-        vertical-align: middle;
 
-        &:hover {
-          cursor: pointer;
+        &__image {
+          display: inline-block;
+          border-radius: 50%;
+          width: 40px;
+          height: 40px;
+          vertical-align: middle;
+
+          &:hover {
+            cursor: pointer;
+          }
+        }
+
+        span {
+          margin-left: 10px !important;
         }
       }
 
-      span {
-        margin-left: 10px !important;
+      button {
+        @include font-menu();
       }
-    }
 
-    button {
-      @include font-menu();
-    }
-
-    span {
-      margin-left: 55px;
+      span {
+        margin-left: 55px;
+      }
     }
   }
 }
